fixing an issue with overflow

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     background: #2d2d2d;
     font-family: 'Montserrat', sans-serif;
-    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 nav {
